# vaist-forge

./: .env.example  .gitignore  1_BRD.md  1_PRD.md  2_FRD.md  2_HLD.md  2_SDD.md  3_LLD.md  3_MVB.md  3_SRS.md  4_CMAKE_CONF.md  4_CROSS_PLATFORM_EXAMPLE.md  4_FRS.md  5_AI_EXAMPLE.md  5_SDP.md  6_BACKEND_Example.md  6_STD.md  6_STP.md  7_SUM.md  CLAUDE.md  CMakeLists.txt  DEVELOPMENT_CHECKLIST.md  README.md  package.json  pnpm-lock.yaml
.github/workflows/: build.yml
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/wasm/: bindings.cpp  descriptor.json  processor.cpp  processor.h
apps/backend/: eslint.config.mjs  package.json  tsconfig.json  wrangler.toml
apps/backend/prisma/: prisma.config.ts  schema.prisma
apps/backend/prisma/migrations/: 0001_initial.sql  0002_add_wasm_artifact_key.sql
apps/backend/src/: server.ts
apps/backend/src/durable-objects/: BuildStatus.ts
apps/backend/src/lib/: auth.ts  crypto.ts  middleware.ts
apps/backend/src/routes/: auth.ts  build.ts  health.ts  plan.ts  projects.ts  user.ts
apps/backend/src/services/: ai.ts  cpp-generator.ts  dsp-templates.ts  github.ts  prompts.ts  wasm-generator.ts
apps/web/: next.config.ts  package-lock.json  package.json
apps/web/public/wam/: vaist-worklet.js
apps/web/src/: proxy.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/(protected)/: layout.tsx
apps/web/src/app/actions/: forge.ts
apps/web/src/components/auth/: auth-provider.tsx  build-status-badge.tsx  google-login-button.tsx  index.ts  value-prop-card.tsx
apps/web/src/components/dashboard/: project-card.tsx
apps/web/src/components/forge/: browser-preview.tsx  forge-panel.tsx  index.ts  mini-studio.tsx  plan-card.tsx  plugin-sidebar.tsx  plugin-window.tsx  preset-manager.tsx  project-capsule.tsx  waveform-display.tsx
apps/web/src/components/nav/: api-quota-indicator.tsx  navbar.tsx
apps/web/src/components/settings/: api-key-modal.tsx
apps/web/src/components/studio/: StudioLayout.tsx  index.ts
apps/web/src/hooks/: use-forge-status.ts
apps/web/src/lib/: api-client.ts  auth-client.ts  server-api.ts
apps/web/src/stores/: auth-store.ts  mixer-store.ts  preset-store.ts  studio-store.ts  transport-store.ts  window-manager.ts
apps/web/src/types/: project.ts  studio.ts
backend/: ai_synthesizer.py  code_parser.py  code_verifier.py  config.py  cpp_generator.py  github_manager.py  main.py  models.py  requirements.txt
backend-python/: __init__.py  ai_synthesizer.py  bmad_orchestrator.py  github_manager.py  main.py  models.py  schemas.py  task_manager.py  template_manager.py
backend-python/prompts/: __init__.py  system_prompts.py
backend/prompts/: bmad_prompts.py  system_prompts.py
docs/: OPUS-4.5-IMPLEMENTATION-PLAN.md  WASM-STUDIO-PLAN.md
scripts/cloudflare-infra/: README.md  cf_infra.py  cloudflare-config.example.yaml  cloudflare-config.yaml  requirements.txt
web/: package-lock.json  package.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/actions/: forge.ts
web/src/components/forge/: build-progress.tsx  forge-panel.tsx  index.ts  mini-studio.tsx  project-capsule.tsx  rotary-knob.tsx
web/src/hooks/: use-forge-status.ts
web/src/types/: project.ts
(+40 files in other folders)
